syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.product.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProductById (GetProductByIdRequest) returns (ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (EmptyResponse);
  rpc PublishProduct (PublishProductRequest) returns (ProductResponse);
  rpc HideProduct (HideProductRequest) returns (ProductResponse);
  rpc SearchProducts (SearchProductsRequest) returns (SearchProductsResponse);
}

message ProductGrpc {
  string id = 1;
  string title = 2;
  string description = 3;
  string price = 4;
  string category = 5;
  bool published = 6;
}

message CreateProductRequest {
  string title = 1;
  string description = 2;
  string price = 3;
  string category = 4;
}

message UpdateProductRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string price = 4;
  string category = 5;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message GetProductByIdRequest {
  string id = 1;
}

message PublishProductRequest {
  string id = 1;
}

message HideProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string price = 4;
  string category = 5;
  bool published = 6;
}

message SearchProductsRequest {
  string text = 1;
  string category = 2;
  string minPrice = 3;
  string maxPrice = 4;
  bool onlyPublished = 5;
}

message SearchProductsResponse {
  repeated ProductResponse products = 1;
}

message EmptyResponse {}